--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "NODE_ENV=development nodemon --watch './src/**/*.ts' --exec 'node --loader ts-node/esm' ./src/application.bootstrap.ts",
     "start:production": "NODE_ENV=production node ./dist/src/application.bootstrap.js",
-    "lint": "eslint --fix src/**/*.ts",
+    "lint:fix": "eslint --fix src/**/*.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
