--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,11 @@ version: '3.1'
 services:
   db:
     image: mariadb:latest
+    volumes:
+      - ./sql:/docker-entrypoint-initdb.d/
     ports:
       - 3306:3306
     environment:
       MARIADB_ROOT_PASSWORD: test123*
       MARIADB_DATABASE: infoScrum
+ 
