--- a/variables.env
+++ b/variables.env
@@ -5,4 +5,4 @@ DB_HOST= localhost
 DB_NAME_TEST= db_test
 DB_NAME_DEV= infoScrum
 JWT_EXP=10
-JWT_SECRET=kikka
+JWT_SECRET=lesfullseronttoujourslesbest
